# tauri-app

./: package.json  pnpm-lock.yaml  tauri-app.code-workspace
client-elm/: elm-focused.code-workspace  elm.json
client-elm/src/: FileTree.elm  Main.elm  index.js
client-elm/tests/: Tests.elm
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  db.rs  main.rs
