[package]
name = "fs-tags"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "fs-tags"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
glob = "0.3.0"
uuid = { version = "0.4", features = [ "serde", "v4" ] }
anyhow = "1.0.13"
tokio-postgres = "0.7.0"
postgres = "0.15.2"
tokio = { version = "1", features = ["full"] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "fs-tags"
path = "src/main.rs"
